--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,16 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql
 
+  redis:
+    image: redis:8.4.0-alpine
+    container_name: redis
+    ports:
+      - 6379:6379
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+    command: ["redis-server", "--requirepass", "$REDIS_PASSWORD"]
+    volumes:
+      - redis-data:/data
 volumes:
   postgres-data:
+  redis-data:
