--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,9 +17,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@types/leaflet": "^1.9.21",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
+    "leaflet": "^1.9.4",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.25",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
