--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -34,7 +34,8 @@
     "@prisma/client": "^7.1.0",
     "axios": "^1.13.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
